--- a/templates/test.html
+++ b/templates/test.html
@@ -1,75 +1,7 @@
-{% load static %}
-       
-    <script type="text/javascript" src=" {% static 'js/webtorrent.min.js' %}"></script>
-
-
-
-
-<h1>Download files using the WebTorrent protocol (BitTorrent over WebRTC).</h1>
-
-
-<!--form method="post" action="/compartir/{{peliculaa.id}}/{{peliculaa.slug}}/" id="pu" name="algo">
-        {% csrf_token %}
-   <select class="amigosshare" name="users_to_share" id="boot-multiselect-demo" multiple="multiple" onchange="cuales_seleccionados(document.algo.users_to_share);"></select><input type="hidden" name="oculto"> 
-</form-->
-<form>
-  <label for="torrentId">Download from a magnet link: </label>
-  <input name="torrentId" , placeholder="magnet:" value="magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d&dn=sintel.mp4&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&tr=wss%3A%2F%2Ftracker.webtorrent.io&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel-1024-surround.mp4">
-  <button type="submit">Download</button>
-</form>
-
-<h2>Log</h2>
-<div class="log"></div>
-
-
-<script type="text/javascript">
-var client = new WebTorrent()
-
-client.on('error', function(err) {
-  console.error('ERROR: ' + err.message)
-})
-
-document.querySelector('form').addEventListener('submit', function(e) {
-  e.preventDefault() // Prevent page refresh
-
-  var torrentId = document.querySelector('form input[name=torrentId]').value
-  log('Adding ' + torrentId)
-  client.add(torrentId, onTorrent)
-})
-
-function onTorrent(torrent) {
-  log('Got torrent metadata!')
-  log(
-    'Torrent info hash: ' + torrent.infoHash + ' ' +
-    '<a href="' + torrent.magnetURI + '" target="_blank">[Magnet URI]</a> ' +
-    '<a href="' + torrent.torrentFileBlobURL + '" target="_blank" download="' + torrent.name + '.torrent">[Download .torrent]</a>'
-  )
-
-  // Print out progress every 5 seconds
-  var interval = setInterval(function() {
-    log('Progress: ' + (torrent.progress * 100).toFixed(1) + '%')
-  }, 5000)
-
-  torrent.on('done', function() {
-    log('Progress: 100%')
-    clearInterval(interval)
-  })
-
-  // Render all files into to the page
-  torrent.files.forEach(function(file) {
-    file.appendTo('.log')
-    log('(Blob URLs only work if the file is loaded from a server. "http//localhost" works. "file://" does not.)')
-    file.getBlobURL(function(err, url) {
-      if (err) return log(err.message)
-      log('File done.')
-      log('<a href="' + url + '">Download full file: ' + file.name + '</a>')
-    })
-  })
+<html lang="en"><head><title>Visor</title><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="search" href="/opensearch.xml" title="Instant.io" type="application/opensearchdescription+xml"><link rel="stylesheet" href="https://instant.io/main.css" charset="utf-8"></head><body cz-shortcut-listen="true"><main><picture class="logo" style="display:none;"><source srcset="/logo.svg"><img src="/logo.png" alt="Instant.io"></picture><p class="subtitle" style="display: none;">Streaming file transfer over <a href="http://webtorrent.io" target="_blank">WebTorrent</a> (torrents on the web)</p><h1 id="logHeading" style="display: none">Log</h1><div class="speed"></div><div class="log"></div><section style="display: none;"><h1>Start sharing</h1><p>Drag-and-drop files to begin seeding. Or choose a file:
+ <input type="file" name="upload" multiple=""></p></section><section><h1>Start downloading</h1><form><label for="torrentId">Download from a magnet link or info hash</label><input name="torrentId" placeholder="magnet:" required=""><button type="submit">Download</button></form></section><footer><p><small>Powered by <a href="http://webtorrent.io" target="_blank">WebTorrent</a>. 100% open source &amp; free software. Works in Chrome, Firefox, and Opera. Source code available on <a href="https://github.com/webtorrent/instant.io" target="_blank">GitHub</a>. © 2017 WebTorrent, LLC.</small></p></footer></main><script type="text/javascript" src="https://instant.io/bundle.js"></script></script><script>window.ga = window.ga || function () {
+  (ga.q = ga.q || []).push(arguments)
 }
-
-function log(str) {
-  var p = document.createElement('p')
-  p.innerHTML = str
-  document.querySelector('.log').appendChild(p)
-}
-</script>
+ga.l = +new Date
+ga('create', 'UA-3898076-18', 'auto')
+ga('send', 'pageview')</script><script async="" src="//www.google-analytics.com/analytics.js"></script></body></html>
