--- a/templates/moviegridfw.html
+++ b/templates/moviegridfw.html
@@ -11,19 +11,20 @@
 
 {% block content %}
 {% if not seriesall %}
-<div class="hero common-hero" style="background: url({% static 'img/fondo.jpg' %}) no-repeat;
-  background-position: center;
+<div class="hero common-hero" style="background: url('https://images.wallpaperscraft.com/image/that_awkward_moment_zac_efron_miles_teller_michael_jordan_92870_1920x1080.jpg') no-repeat;
+  background-position: center 0px;
                       text-align: center;
                       background-size: cover;
                       position: relative;
                       padding-top: 200px;
-                      padding-bottom: 50px;
+                      padding-bottom: 200px;
                       display: -webkit-flex;
                       display: -moz-box;
                       display: -ms-flexbox;
                       display: flex;
                       align-items: center;
-                      justify-content: center; ">
+                      justify-content: center; 
+                      ">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -530,13 +531,13 @@ El mago de Oz (1939)</h1>
 </div>
 {% endif %}
 {% if seriesall %}
-<div class="hero common-hero" style="background: url({% static 'img/fondo.jpg' %}) no-repeat;
-  background-position: center;
+<div class="hero common-hero" style="background: url('https://images.wallpaperscraft.com/image/that_awkward_moment_zac_efron_miles_teller_michael_jordan_92870_1920x1080.jpg') no-repeat;
+  background-position: center 0px;
                       text-align: center;
                       background-size: cover;
                       position: relative;
                       padding-top: 200px;
-                      padding-bottom: 50px;
+                      padding-bottom: 200px;
                       display: -webkit-flex;
                       display: -moz-box;
                       display: -ms-flexbox;
