--- a/templates/temporada_detail.html
+++ b/templates/temporada_detail.html
@@ -913,7 +913,7 @@ document.getElementById('panelstreamcloud').style.display="none"
 
                     <div class="wrapper">
 
-                        <p class="txt1">{{capitulo.num_episodio}}. {{capitulo.nombre}} <span class="txt2"><i class="fa fa-eye icon1"></i>{{h.hitcount}}</span></p>
+                        <p class="txt1">{{capitulo.num_episodio}}. {{capitulo.nombre}} <span class="txt2"><i class="fa fa-eye icon1"></i>{{h.hitcount_ever}}</span></p>
                         <p class="txt2"></p>
                     </div>
                     <div style="display: block">
