--- a/templates/404.html
+++ b/templates/404.html
@@ -16,10 +16,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="keywords" content="Elegant Error Page template Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login sign up Responsive web template, SmartPhone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 
 <!-- Custom Theme files -->
-<link href="http://127.0.0.1:8000/static/css/error.css/" rel="stylesheet"  />
+<link href="{% static 'css/error.css' %}" rel="stylesheet"  />
 <!-- //Custom Theme files -->
 <!-- web font -->
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
 <!-- //web font -->
 </head>
 <body>
