--- a/templates/404.html
+++ b/templates/404.html
@@ -1,23 +1,14 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-{% extends 'base.html' %}
-{% load static %}
+
+
 
 <!DOCTYPE html>
 <html>
 <head>
 <title>Elegant Error Page Flat Responsive Widget Template :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Elegant Error Page template Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login sign up Responsive web template, SmartPhone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<link rel="icon" type="image/png" href="https://d11nqwgsnjp6i8.cloudfront.net/static/img/favicon.png" />
 
-<!-- Custom Theme files -->
-<link href="{% static 'css/error.css' %}" rel="stylesheet"  />
-<!-- //Custom Theme files -->
+<link href="https://d11nqwgsnjp6i8.cloudfront.net/static/css/error.css" rel="stylesheet"  />
 <!-- web font -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
 <!-- //web font -->
@@ -26,24 +17,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- main -->
 	<div class="agileits-main"> 
 		<div class="agileinfo-row">
-				
+				<br/>
 			<div class="w3layouts-errortext">
-				<h2>4<span>0</span>4</h2>
+				<img src="http://haintheme.com/demo/html/bustter/images/uploads/err-img.png" style="width: 60%;">
 				
-				<h1>Sorry! The page you were looking for could not be found </h1>
-				<p class="w3lstext">You have been tricked into click on a link that can not be found. Please check the url or go to <a href="#">main page</a> and see if you can locate what you are looking for </p>
+				<h1>Lo siento, ha habido un error en tu solicitud.</h1>
+				<p class="w3lstext">Tal vez haz accedido a una url que no existe. Por favor, asegurate de que tu url exista. Sino ve a <a href="inicio"> Inicio.</a> </p>
 				<div class="agile-search"> 
-					<form action="#" method="post">
-						<input type="text" name="Search" placeholder="Enter your search term..." id="search" required="">
-						<input type="submit" value="Search">
+					<form method="post" action="/search/">
+						<input type="text" name="Search" placeholder="Buscar en WaoMovies..." id="search" required="" name="src">
+						<input type="submit" value="Buscar">
 					</form> 
 				</div>
 				<div class="w3top-nav-right">	
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="#">About</a></li>  
-						<li><a href="#">Blog</a></li> 
-						<li><a href="#">Contact</a></li>
+						<li><a href="/inicio/">Inicio</a></li>
+						<li><a href="/sobre/">Acerca</a></li>  
+						<li><a href="/sobre/">Contacto</a></li>
 					</ul> 
 				</div>	
 			</div>	
@@ -52,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //main -->
 	<!-- copyright -->
 	<div class="copyright w3-agile">
-		<p>© 2017 Elegant Error Page . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
+		<p>© 2019 WaoMovies. Todos los derechos reselvados</p>
 	</div>
 	<!-- //copyright --> 
 </body>
