--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Elegant Error Page Flat Responsive Widget Template :: w3layouts</title>
+<title>404</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="https://d11nqwgsnjp6i8.cloudfront.net/static/img/favicon.png" />
 
